--- a/app/globals.css
+++ b/app/globals.css
@@ -2,60 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%23ffffff' stroke-width='0.6' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='rotate(45 1000 750) scale(17.25) translate(-942.03 -706.52)'%3E%3Cuse fill='%23fcfcfc' href='%23s' y='2'/%3E%3Cuse fill='%23fcfcfc' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='2'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='rotate(45 1000 750) scale(17.25) translate(-942.03 -706.52)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='rotate(45 1000 750) scale(17.25) translate(-942.03 -706.52)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='rotate(45 1000 750) scale(17.25) translate(-942.03 -706.52)'%3E%3Cg fill='%23f2f2f2'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='rotate(45 1000 750) scale(17.25) translate(-942.03 -706.52)'%3E%3Cg fill='%23ffffff'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%23efefef'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='rotate(45 1000 750) scale(17.25) translate(-942.03 -706.52)'%3E%3Cg fill='%2396D3E0'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='rotate(45 1000 750) scale(17.25) translate(-942.03 -706.52)'%3E%3Cg fill='%2396D3E0'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='rotate(45 1000 750) scale(17.25) translate(-942.03 -706.52)'%3E%3Cg fill='%2396D3E0'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+}
 
-.openbtn1{
+.openbtn1 {
   position: relative;
   cursor: pointer;
-    width: 42px;
-    height:42px;
+  width: 42px;
+  height: 42px;
   border-radius: 5px;
 }
 
 /*ボタン内側*/
-.openbtn1 span{
-    display: inline-block;
-    transition: all .4s;/*アニメーションの設定*/
-    position: absolute;
-    left: 7.2px;
-    height: 3px;
-    border-radius: 2px;
-    width: 65%;
-  }
+.openbtn1 span {
+  display: inline-block;
+  transition: all 0.4s; /*アニメーションの設定*/
+  position: absolute;
+  left: 7.2px;
+  height: 3px;
+  border-radius: 2px;
+  width: 65%;
+}
 
 .openbtn1 span:nth-of-type(1) {
-  top:10px; 
+  top: 10px;
 }
 
 .openbtn1 span:nth-of-type(2) {
-  top:20px;
+  top: 20px;
 }
 
 .openbtn1 span:nth-of-type(3) {
-  top:30px;
+  top: 30px;
 }
 
 /*activeクラスが付与されると線が回転して×に*/
 
 .openbtn1.active span:nth-of-type(1) {
-    top: 13px;
-    left: 10px;
-    transform: translateY(6px) rotate(-45deg);
-    width: 55%;
+  top: 13px;
+  left: 10px;
+  transform: translateY(6px) rotate(-45deg);
+  width: 55%;
 }
 
 .openbtn1.active span:nth-of-type(2) {
-  opacity: 0;/*真ん中の線は透過*/
+  opacity: 0; /*真ん中の線は透過*/
 }
 
-.openbtn1.active span:nth-of-type(3){
-    top: 26px;
-    left: 10px;
-    transform: translateY(-6px) rotate(45deg);
-    width: 55%;
+.openbtn1.active span:nth-of-type(3) {
+  top: 26px;
+  left: 10px;
+  transform: translateY(-6px) rotate(45deg);
+  width: 55%;
 }
 
 .kvWrapper {
-  background-image: url('/images/kv_bg.jpg');
+  background-image: url("/images/kv_bg.jpg");
   background-size: cover;
   background-position-y: 60%;
 }
@@ -67,7 +73,7 @@
 }
 @media (min-width: 1024px) {
   .kvWrapper {
-    background-image: url('/images/kv_bg_pc.jpg');
+    background-image: url("/images/kv_bg_pc.jpg");
     background-size: cover;
     background-position-x: 50%;
   }
@@ -78,15 +84,15 @@ html {
   scroll-behavior: smooth; /* ページ内リンクのスクロールをスムース化 */
 }
 
-@media (min-width:1280px ) {
+@media (min-width: 1280px) {
   html {
-      scroll-padding-top: 100px;
-      scroll-behavior: smooth;
+    scroll-padding-top: 100px;
+    scroll-behavior: smooth;
   }
 }
 
 .venuewrapper {
-  animation: venuewrapper 60s infinite linear 0.5s both;
+  animation: venuewrapper 50s infinite linear 0.5s both;
 }
 
 @keyframes venuewrapper {
@@ -94,6 +100,6 @@ html {
     transform: translateX(0%);
   }
   100% {
-    transform: translateX(-78.1%);
+    transform: translateX(-50.2%);
   }
 }
